stylesheet fix for overflowing headers on ie

--- a/css/themes/tabulator_autumn.css
+++ b/css/themes/tabulator_autumn.css
@@ -13,7 +13,7 @@
   color: #E4C24D;
   font-weight: bold;
   white-space: nowrap;
-  overflow-x: hidden;
+  overflow: hidden;
   -moz-user-select: none;
   -khtml-user-select: none;
   -webkit-user-select: none;
