--- a/css/themes/tabulator_midnight.less
+++ b/css/themes/tabulator_midnight.less
@@ -52,8 +52,8 @@
 		font-weight:bold;
 
 		white-space: nowrap;
+		overflow:hidden;
 
-		overflow-x:hidden;
 		-moz-user-select: none;
 		-khtml-user-select: none;
 		-webkit-user-select: none;
