--- a/css/themes/tabulator_simple.less
+++ b/css/themes/tabulator_simple.less
@@ -51,7 +51,7 @@
 		font-weight:bold;
 
 		white-space: nowrap;
-		overflow-x:hidden;
+		overflow:hidden;
 
 		-moz-user-select: none;
 		-khtml-user-select: none;
